--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-/* {
-  outline: 2px solid rgba(0, 0, 255, .3)
-}
+* {
+  outline: 2px solid rgba(0, 0, 255, 0.3); }
+
 /*Reset*/
 * {
   margin: 0;
@@ -166,33 +166,31 @@ section h3, section h2 {
   margin-bottom: 1em; }
 
 /* NOSOTROS */
-section#nosotros {
-  padding: 45px 0; }
-  section#nosotros:after {
-    content: "";
-    display: table;
-    clear: both; }
-  section#nosotros .mision,
-  section#nosotros .vision,
-  section#nosotros .valores {
-    width: 33.333%;
-    float: left;
-    text-align: center;
-    font-size: 0.9em;
-    padding: 0 65px; }
-    section#nosotros .mision i,
-    section#nosotros .vision i,
-    section#nosotros .valores i {
-      font-size: 30px; }
-    section#nosotros .mision h3,
-    section#nosotros .vision h3,
-    section#nosotros .valores h3 {
-      text-transform: uppercase;
-      margin: 0.5em 0 1em;
-      font-size: 24px; }
+section#nosotrosSection:after {
+  content: "";
+  display: table;
+  clear: both; }
+section#nosotrosSection .mision,
+section#nosotrosSection .vision,
+section#nosotrosSection .valores {
+  width: 33.333%;
+  float: left;
+  text-align: center;
+  font-size: 0.9em;
+  padding: 0 65px; }
+  section#nosotrosSection .mision i,
+  section#nosotrosSection .vision i,
+  section#nosotrosSection .valores i {
+    font-size: 30px; }
+  section#nosotrosSection .mision h3,
+  section#nosotrosSection .vision h3,
+  section#nosotrosSection .valores h3 {
+    text-transform: uppercase;
+    margin: 0.5em 0 1em;
+    font-size: 24px; }
 
 /* PROYECTOS */
-section#proyectos {
+section#proyectosSection {
   background-color: #f5f5f5; }
 
 .galeria-proyectos:after {
@@ -271,22 +269,22 @@ section#proyectos {
     width: 100%; }
 
 /* CONTACTO */
-section#contacto {
+section#contactoSection {
   background-color: #3F6DA9;
   color: #fafafa; }
-  section#contacto form {
+  section#contactoSection form {
     width: 50%;
     min-width: 550px;
     margin: 0 auto; }
-    section#contacto form p {
+    section#contactoSection form p {
       margin-bottom: 0.5em; }
-      section#contacto form p:after {
+      section#contactoSection form p:after {
         content: "";
         display: table;
         clear: both; }
-    section#contacto form label, section#contacto form input, section#contacto form textarea {
+    section#contactoSection form label, section#contactoSection form input, section#contactoSection form textarea {
       float: left; }
-    section#contacto form label {
+    section#contactoSection form label {
       width: 30%;
       text-transform: uppercase;
       text-align: right;
@@ -294,15 +292,15 @@ section#contacto {
       padding-right: 30px;
       line-height: 2em;
       font-size: 0.9em; }
-    section#contacto form input, section#contacto form textarea {
+    section#contactoSection form input, section#contactoSection form textarea {
       width: 70%;
       border: 1px solid #eee;
       border-radius: 4px;
       box-shadow: inset 0px 0px 5px #ccc; }
-    section#contacto form input {
+    section#contactoSection form input {
       height: 36px;
       padding: 0.5em 1em; }
-    section#contacto form input[type="submit"] {
+    section#contactoSection form input[type="submit"] {
       margin-left: 30%;
       background-color: #74CBB5;
       border: none;
@@ -355,5 +353,19 @@ footer {
   footer #map iframe {
     width: 100%;
     height: 250px; }
+
+/* RESPONSIVE MEDIA QUERIES*/
+/* For Tablet*/
+@media screen and (max-width: 992px) {
+  section#nosotrosSection .mision,
+  section#nosotrosSection .vision,
+  section#nosotrosSection .valores {
+    margin-top: 45px; } }
+/* For small devices */
+@media screen and (max-width: 768px) {
+  section#nosotrosSection .mision,
+  section#nosotrosSection .vision,
+  section#nosotrosSection .valores {
+    width: 100%; } }
 
 /*# sourceMappingURL=main.css.map */
