--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-* {
-  outline: 2px solid rgba(0, 0, 255, 0.3); }
-
+/* {
+  outline: 2px solid rgba(0, 0, 255, .3)
+}
 /*Reset*/
 * {
   margin: 0;
