--- a/css/sass/_responsive.scss
+++ b/css/sass/_responsive.scss
@@ -3,27 +3,117 @@
 $breakpoint-tablet : 992px ;
 $breakpoint-small-device: 768px;
 $breakpoint-mobile: 640px;
-$breakpoint-small-mobile: 767px;
+$breakpoint-small-mobile: 480px;
 
 
 /* For Tablet*/
 @media screen and (max-width: $breakpoint-tablet) {
-  section#nosotrosSection {
+  #seccionNosotros {
     .mision,
     .vision,
     .valores {
-      margin-top: 45px;
+      padding: 0 35px;
     }
   }
 }
 
-/* For small devices */
+/* For small devices 768px*/
 @media screen and (max-width: $breakpoint-small-device) {
-  section#nosotrosSection {
+  #seccionNosotros {
     .mision,
     .vision,
     .valores {
       width: 100%;
+      margin-bottom: 20px;
+      font-size: 0.8em;
+      h3 {
+        font-size: 20px;
+      }
+    }
+    .mision {
+        margin-top: 0;
     }
   }
+  
+  .proyectos-electricos,
+  .proyectos-civiles {
+      width: 90%;
+      float: none;
+      margin: auto;
+      
+      div[class*="item"] {
+        height: 250px;
+      }
+  }
+  .electr-03 img{
+    width: 100%;
+  }
+  
+  footer {
+    .footer-container {
+      >div {
+        padding-right: 35px;
+      }
+    }
+  }
+}
+
+/* For Mobile  640px*/
+@media screen and (max-width: $breakpoint-mobile) {
+  .proyectos-electricos,
+  .proyectos-civiles {
+    .item-md {
+      width: 100%;
+      img {
+        width: 100%;
+      }
+    }
+  }
+  #seccionContacto {
+    form {
+      min-width: 400px;
+      width: 90%;
+      label {
+        font-size: 0.75em;
+      }
+    }
+  }
+  
+  footer {
+    .footer-container {
+      >div {
+        width: 90%;
+        float: none;
+        margin: 25px auto 0;
+        padding-right: 0; 
+      }
+    }
+  }
+}
+
+/* for small mobiles 480px*/
+@media screen and (max-width: $breakpoint-small-mobile) {
+  .proyectos-civiles,
+  .proyectos-electricos {
+    div[class*="item"] {
+      height: 200px;
+    }
+  }
+  #seccionContacto {
+    form {
+      min-width: 0;
+      margin-top: 22px;
+      label,
+      input,
+      textarea {
+        width: 100%;
+        float: none;
+        text-align: left;
+      }
+      input[type="submit"] {
+        margin-left: 0;
+        text-align: center;
+      }
+    }
+  } 
 }
