--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -108,7 +108,9 @@ hr {
 div.hero {
   width: 100%;
   height: 100vh;
-  background-color:#3F6DA9 ;
+  //background-color:#3F6DA9 ;
+  background: url('../img/bg-construccion-01.jpg') center;
+  background-size: cover;
   display: table;
   #menu {
     position: absolute;
@@ -171,8 +173,10 @@ div.hero {
     position: relative;
     text-align: center;
     padding-right: 15px;
+    background: rgba(0, 0, 0, 0.15);
     img {
       width: 20%;
+      min-width: 200px;
     }
     ul {
       position: absolute;
@@ -219,7 +223,7 @@ section {
     padding-bottom: 75px;
   }
   h3, h2 {
-    font-size: 24px;
+    font-size: 22px;
     margin-bottom: 1em;
   }
 }
@@ -231,9 +235,11 @@ section {
   .valores {
     width: 33.333%;
     float: left;
+    padding: 0 65px;
+    margin-top: 35px;
     text-align: center;
     font-size: 0.9em;
-    padding: 0 65px;
+    
     i {
       font-size: 30px;
     }
@@ -325,7 +331,7 @@ section {
   form {
     width: 50%;
     min-width: 550px;
-    margin: 0 auto;
+    margin: 45px auto 0;
     p {
       @include clearfix;
       margin-bottom: 0.5em;
@@ -340,17 +346,19 @@ section {
       height: 2em;
       padding-right: 30px;;
       line-height: 2em;
-      font-size: 0.9em;
+      font-size: 0.8em;
     }
     input, textarea {
       width: 70%;
       border: 1px solid #eee;
       border-radius: 4px;
+      padding: 0.5em 1em;
+      font-size: 0.9em;
+      font-family: inherit;
       box-shadow: inset 0px 0px 5px #ccc ;
     }
     input {
       height: 36px;
-      padding: 0.5em 1em;
     }
     input[type="submit"] {
       margin-left: 30%;
@@ -375,6 +383,7 @@ footer {
   .footer-container {
     width: 90%;
     margin: 0 auto;
+    font-size: 0.85em;
     h4 {
       margin-bottom: 0.4em;
       font-size: 1.1em;
@@ -403,8 +412,7 @@ footer {
       width: 100% !important;
       padding-right: 0 !important;
     img {
-      height: 45px;
-      margin-bottom: 5px;
+      height: 35px;
     }
   }
   .informacion {
