--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,21 @@ div.hero {
     background: rgba(0, 0, 0, 0.15); }
     div.hero > div img {
       width: 20%;
-      min-width: 200px; }
+      min-width: 200px;
+      /*
+      background: rgba(255,255,255,.3);
+      position: relative;
+      
+      &::before {
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 20px;
+          background: rgba(0, 0, 0, 0.15);
+      }
+      */ }
     div.hero > div ul {
       position: absolute;
       width: 100%;
