--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -42,7 +42,7 @@
   font-weight: normal;
   src: url("../fonts/SFFourcheSCItalic.ttf") format("truetype");
 }
-
+//Helvetica
 @font-face {
   font-family: 'HelveticaNeue';
   src: url('../fonts/HelveticaNeueThin.ttf') format('truetype');
@@ -179,6 +179,20 @@ div.hero {
     img {
       width: 20%;
       min-width: 200px;
+      /*
+      background: rgba(255,255,255,.3);
+      position: relative;
+      
+      &::before {
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 20px;
+          background: rgba(0, 0, 0, 0.15);
+      }
+      */
     }
     ul {
       position: absolute;
