Added style for validation of form

--- a/css/main.css
+++ b/css/main.css
@@ -126,23 +126,27 @@ div.hero {
     text-align: center;
     padding-right: 15px;
     background: rgba(0, 0, 0, 0.15); }
-    div.hero > div img {
+    div.hero > div .logoHacis {
       width: 20%;
       min-width: 200px;
-      /*
-      background: rgba(255,255,255,.3);
+      margin: auto;
+      background: rgba(255, 255, 255, 0.3);
       position: relative;
-      
+      /*
       &::before {
           content: "";
           position: absolute;
           left: 0;
-          bottom: 0;
+          bottom: 13%;
           width: 100%;
-          height: 20px;
-          background: rgba(0, 0, 0, 0.15);
+          height: 18%;
+          background: rgba(0, 0, 0, 1);
+          z-index: -1;
       }
       */ }
+      div.hero > div .logoHacis img {
+        width: 100%;
+        display: block; }
     div.hero > div ul {
       position: absolute;
       width: 100%;
@@ -317,6 +321,7 @@ section h3, section h2 {
       border: 1px solid #eee;
       border-radius: 4px;
       padding: 0.5em 1em;
+      color: #666;
       font-size: 0.9em;
       font-family: inherit;
       box-shadow: inset 0px 0px 5px #ccc; }
@@ -330,6 +335,12 @@ section h3, section h2 {
       letter-spacing: 1px;
       color: #333;
       cursor: pointer; }
+    #seccionContacto form [ng-show] {
+      width: 70%;
+      margin: -7px 0 0 auto;
+      font-size: 0.95em;
+      text-transform: capitalize;
+      color: #FFC107; }
 
 /* FOOTER */
 footer {
@@ -483,7 +494,9 @@ footer {
       text-align: left; }
     #seccionContacto form input[type="submit"] {
       margin-left: 0;
-      text-align: center; } }
+      text-align: center; }
+    #seccionContacto form [ng-show] {
+      width: 100%; } }
 /**/
 
 /*# sourceMappingURL=main.css.map */
