--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -146,11 +146,16 @@ div.hero {
       float: right;
       li {
         float: left;
+        box-shadow: inset 1px 0 0 0 $color-font-white-opac;
+        &:last-child {
+            border-right: 1px solid $color-font-white-opac;
+        }
       }
       a {
         display: block;
         height: 50px;
-        padding: 0.75em 1.25em;
+        padding: 0 1.25em;
+        line-height: 4;
         color: inherit;
         text-transform: uppercase;
         font-size: 0.75em;
@@ -180,7 +185,7 @@ div.hero {
       width: 20%;
       min-width: 200px;
       margin: auto;
-      background: rgba(255,255,255,.3);
+      //background: rgba(255,255,255,.3);
       position: relative;
       img {
         width: 100%;
@@ -213,7 +218,7 @@ div.hero {
       //transition: background-color 0.25s  ease-out;
       transition: all 0.30s ease-in-out;
       &:nth-child(2) {
-        margin: 0 25px;
+        margin-right: 25px;
       }
       &:hover {
         background-color: $color-font-white;
