--- a/css/sass/_responsive.scss
+++ b/css/sass/_responsive.scss
@@ -162,8 +162,9 @@ $breakpoint-small-mobile: 480px;
         margin-left: 0;
         text-align: center;
       }
-      [ng-show] {
+      label.error {
         width: 100%;
+        margin-left: 0;
       }
     }
   } 
