--- a/css/sass/_responsive.scss
+++ b/css/sass/_responsive.scss
@@ -6,7 +6,7 @@ $breakpoint-mobile: 640px;
 $breakpoint-small-mobile: 480px;
 
 
-/* For Tablet*/
+/* For Tablet 992*/
 @media screen and (max-width: $breakpoint-tablet) {
   #seccionNosotros {
     .mision,
@@ -14,6 +14,22 @@ $breakpoint-small-mobile: 480px;
     .valores {
       padding: 0 35px;
     }
+  }
+  footer {
+      .footer-container {
+          > div {
+              width: 50%;
+              &:last-child {
+                width: 80%;
+                margin: 35px 10% 0;       
+              }
+          }
+      }
+      #map {
+          iframe {
+              height: 300px;
+          }
+      }
   }
 }
 
@@ -131,9 +147,18 @@ $breakpoint-small-mobile: 480px;
         float: none;
         margin: 25px auto 0;
         padding-right: 0; 
+        &:last-child {
+            width: 90%;
+            margin: 35px 5% 0;
+        }
       }
       br {
         display: none;
+      }
+      #map {
+         iframe {
+             height: 250px;
+         } 
       }
     }
   }
