--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -162,12 +162,12 @@ div.hero {
         letter-spacing: 1px;
         transition: all 0.15s ease-in;
         &:hover {
-          background-color: lighten($color-turquesa, 1% );
+          background-color: lighten($color-turquesa, 10% );
           color: $color-font-white;
           text-shadow: 1px 0px 1px $color-font-black;
         }
         &.active {
-          background-color: $color-turquesa;
+          background-color: darken($color-turquesa, 5%);
           color: $color-font-white;
           text-shadow: 1px 0px 1px $color-font-black;
         }
