--- a/css/main.css
+++ b/css/main.css
@@ -127,13 +127,11 @@ div.hero {
     display: table-cell;
     vertical-align: middle;
     position: relative;
-    text-align: center;
-    padding-right: 15px;
-    background: rgba(0, 0, 0, 0.15); }
+    text-align: center; }
     div.hero > div .logoHacis {
-      width: 20%;
-      min-width: 200px;
+      width: 100%;
       margin: auto;
+      background: rgba(255, 255, 255, 0.8);
       position: relative;
       /*
       &::before {
@@ -148,8 +146,10 @@ div.hero {
       }
       */ }
       div.hero > div .logoHacis img {
-        width: 100%;
-        display: block; }
+        width: 30%;
+        min-width: 200px;
+        display: block;
+        margin: 0 auto; }
     div.hero > div ul {
       position: absolute;
       width: 100%;
