--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,17 @@ section h3, section h2 {
       box-shadow: inset 0px 0px 5px #ccc; }
     #seccionContacto form input {
       height: 34px; }
+    #seccionContacto form #sendingText {
+      display: inline-block;
+      width: 70%;
+      margin-left: 30%;
+      box-shadow: 0px 0px 3px #eee;
+      border-radius: 4px;
+      color: #74CBB5;
+      text-transform: uppercase;
+      text-align: center;
+      font-size: 0.9em;
+      text-shadow: 1px 1px 1px #666; }
     #seccionContacto form input[type="submit"] {
       margin-left: 30%;
       background-color: #74CBB5;
